finish the sidebar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.html">
-    <link rel="stylesheet" href="./public/Bootstrap/bootstrap.css.map">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>To-Do-List-React</title>
   </head>
   <body>
@@ -12,6 +12,5 @@
     </div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="public/font-awesome/all.min.js"></script>
-    <script src="./public/Bootstrap/bootstrap.bundle.js"></script>
   </body>
 </html>
