Creat The Space for main page and coloring is done

--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
     </div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="public/font-awesome/all.min.js"></script>
+    <script>
+      // El Black Color M4 rady yemla el screan 
+      // Proplem solving 3ala ma tofrag
+        let TheWindowHight = window.innerHeight;
+        let TheRootElement = document.getElementById("root");
+        TheRootElement.style.height = `${TheWindowHight}px`
+    </script>
   </body>
 </html>
